WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281406
[MediaRecorder/WebM] First frames are missed in a recording
https://bugs.webkit.org/show_bug.cgi?id=281406
Summary
[MediaRecorder/WebM] First frames are missed in a recording
Jean-Yves Avenard [:jya]
Reported
2024-10-13 20:38:27 PDT
STR: Open
https://jernoble.github.io/samples/bin/media-recorder/bip-bop.html
By default MP4 is selected with. Click on Start wait a few seconds click on stop. On the right side, it shows the first frame (it has 000001 in the counter). Now click on reset, select webm/vp8 and repeat the step above. The frame showing on the right is typically 3, sometimes 4. The first 2 frames have been dropped. This occurs when video is received before any audio, we drop the samples as we set that timestamp 0 is the start time of the first audio frame.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-13 20:38:48 PDT
<
rdar://problem/137854083
>
Jean-Yves Avenard [:jya]
Comment 2
2024-10-13 23:35:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35136
Jean-Yves Avenard [:jya]
Comment 3
2024-10-14 23:07:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35112
EWS
Comment 4
2024-10-15 18:47:21 PDT
Committed
285236@main
(2562b4f9c893): <
https://commits.webkit.org/285236@main
> Reviewed commits have been landed. Closing PR #35136 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug