[MediaRecorder/WebM] First frames are missed in a recording https://bugs.webkit.org/show_bug.cgi?id=281406 rdar://137854083

Reviewed by Eric Carlson.

Don't drop video frames received before the first audio frame.
Manual expirementation shows that we don't need to worry about shifting the timestamp
of the first audio frame by the delay between first video and first audio.

Added test.

* LayoutTests/http/wpt/mediarecorder/MediaRecorder-first-frame-expected.txt: Added.
* LayoutTests/http/wpt/mediarecorder/MediaRecorder-first-frame.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterWebM.mm:
(WebCore::MediaRecorderPrivateWriterWebM::appendVideoFrame):

Canonical link: https://commits.webkit.org/285236@main